--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
     "redirects": [
+        { "source": "/", "destination": "https://www.example.com" , "permanent": true},
         { "source": "/:path*", "destination": "https://www.example.com/:path*" , "permanent": true}
     ]
 }
