--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "redirects": [
-        { "source": "/", "destination": "https://www.example.com" , "permanent": true},
-        { "source": "/:path*", "destination": "https://www.example.com/:path*" , "permanent": true}
+        { "source": "/", "destination": "https://www.newdue.co" , "permanent": true},
+        { "source": "/:path*", "destination": "https://www.newdue.co/:path*" , "permanent": true}
     ]
 }
